Update chapter 11 till commit from Apr 21, 2021

--- a/11-BayesianStatistics.Rmd
+++ b/11-BayesianStatistics.Rmd
@@ -37,9 +37,8 @@ NHANES_adult <-
 
 ```
 
-<!--In this chapter we will take up the approach to statistical modeling and inference that stands in contrast to the null hypothesis testing framework that you encountered in Chapter \@ref(hypothesis-testing).  This is known as "Bayesian statistics" after the Reverend Thomas Bayes, whose theorem you have already encountered in Chapter \@ref(probability).  In this chapter you will learn how Bayes' theorem provides a way of understanding data that solves many of the conceptual problems that we discussed regarding null hypothesis testing.-->
-En este capítulo estaremos trabajando desde el enfoque del modelado estadístico e inferencial que contrasta con el marco de prueba de hipótesis nula que vimos en el capítulo \@ref(hypothesis-testing). 
-Esto se conoce como "Estadística Bayesiana", en honor al reverendo Thomas Bayes, cuyo teorema ya has visto en el capítulo  \@ref(probability). En este capítulo aprenderás cómo el teorema de Bayes proporciona una forma de entender los datos que resuelve muchos de los problemas conceptuales que discutimos con respecto a la prueba de hipótesis nula.   
+<!--In this chapter we will take up the approach to statistical modeling and inference that stands in contrast to the null hypothesis testing framework that you encountered in Chapter \@ref(hypothesis-testing).  This is known as "Bayesian statistics" after the Reverend Thomas Bayes, whose theorem you have already encountered in Chapter \@ref(probability).  In this chapter you will learn how Bayes' theorem provides a way of understanding data that solves many of the conceptual problems that we discussed regarding null hypothesis testing, while also introducing some new challenges. -->
+En este capítulo estaremos trabajando desde el enfoque del modelado estadístico e inferencial que contrasta con el marco de prueba de hipótesis nula que vimos en el capítulo \@ref(hypothesis-testing).  Esto se conoce como "Estadística Bayesiana", en honor al reverendo Thomas Bayes, cuyo teorema ya has visto en el capítulo  \@ref(probability). En este capítulo aprenderás cómo el teorema de Bayes proporciona una forma de entender los datos que resuelve muchos de los problemas conceptuales que discutimos con respecto a la prueba de hipótesis nula, mientras introduce a su vez nuevos retos.  
 
 <!--## Generative models-->
 ## Modelos Generativos 
@@ -67,8 +66,8 @@ La razón por la cual la estadística Bayesiana tiene tal nombre es porque aprov
 # *TBD: MOTIVATE SWITCH FROM 7 To 7 OR MORE*
 ```
 
-<!--The resulting probability is `r I(sprintf("%.3f",pbinom(7, 10, .5, lower.tail = FALSE)))`.  That is a fairly small number, but this number doesn't really answer the question that we are asking -- it is telling us about the likelihood of 7 or more heads given some particular probability of heads, whereas what we really want to know is the probability of heads. This should sound familiar, as it's exactly the situation that we were in with null hypothesis testing, which told us about the likelihood of data rather than the likelihood of hypotheses.-->
-La probabilidad resultante es `r I(sprintf("%.3f",pbinom(7, 10, .5, lower.tail = FALSE)))`. Ese es un número bastante pequeño, pero este número no responde realmente a la pregunta que estamos haciendo-- nos está diciendo la probabilidad de que en 7 ocasiones o más la moneda caiga en cara, dada una probabilidad particular de cara, mientras que lo que queremos saber en realidad es la probabilidad de que caiga cara en esa moneda en particular. Esto debería sonar familiar, ya que es una situación exactamente igual a la que estábamos con la prueba de hipótesis nula, la cual nos mostró la probabilidad de los datos, en lugar de la probabilidad de las hipótesis.  
+<!--The resulting probability is `r I(sprintf("%.3f",pbinom(7, 10, .5, lower.tail = FALSE)))`.  That is a fairly small number, but this number doesn't really answer the question that we are asking -- it is telling us about the likelihood of 7 or more heads given some particular probability of heads, whereas what we really want to know is the true probability of heads for this particular coin. This should sound familiar, as it's exactly the situation that we were in with null hypothesis testing, which told us about the likelihood of data rather than the likelihood of hypotheses.-->
+La probabilidad resultante es `r I(sprintf("%.3f",pbinom(7, 10, .5, lower.tail = FALSE)))`. Ese es un número bastante pequeño, pero este número no responde realmente a la pregunta que estamos haciendo-- nos está diciendo la probabilidad de que en 7 ocasiones o más la moneda caiga en cara, dada una probabilidad particular de cara, mientras que lo que queremos saber en realidad es la probabilidad verdadera de que caiga cara en esta moneda en particular. Esto debería sonar familiar, ya que es una situación exactamente igual a la que estábamos con la prueba de hipótesis nula, la cual nos mostró la probabilidad de los datos, en lugar de la probabilidad de las hipótesis.  
 
 <!--Remember that Bayes' theorem provides us with the tool that we need to invert a conditional probability:-->
 Recuerda que el teorema de Bayes nos provee con una herramienta que necesitamos para invertir una probabilidad condicional. 
@@ -116,8 +115,8 @@ Lo que el personal de seguridad quiere saber es cuál es la probabilidad de que 
 <!--### Specifying the prior-->
 ### Especificar la probabilidad previa
 
-<!--To use Bayes' theorem, we first need to specify the prior probability for the hypothesis.  In this case, we don't know the real number but we can assume that it's quite small.  According to the [FAA](https://www.faa.gov/air_traffic/by_the_numbers/media/Air_Traffic_by_the_Numbers_2018.pdf), there were 971,595,898 air passengers in the U.S. in 2017.  Let's say that one out of those travelers was carrying an explosive in their bag --- that would give a prior probability of 1 out of 971 million, which is very small!  The security personnel may have reasonably held a stronger prior in the months after the 9/11 attack, so let's say that their subjective belief was that one out of every million flyers was carrying an explosive.-->
-Para usar el teorema de Bayes, primero debemos especificar la probabilidad previa para la hipótesis. En este caso, no sabemos el número real pero podemos asumar que es pequeño. De acuerdo a la [FAA](https://www.faa.gov/air_traffic/by_the_numbers/media/Air_Traffic_by_the_Numbers_2018.pdf), había 971,595,898 pasajeros al aire en los Estados Unidos de América en 2017. Digamos que uno de esos viajeros llevaba un explosivo en su bolsa-- esto nos daría una probabilidad previa de 1 de 971 millones, lo cual es muy pequeño. El personal de seguridad seguramente tuvo en mente una probabilidad previa mucho mayor en los meses después del ataque del 9/11, así que diremos que su pensamiento subjetivo era que uno en un millón de viajeros traía consigo un explosivo. 
+<!--To use Bayes' theorem, we first need to specify the prior probability for the hypothesis.  In this case, we don't know the real number but we can assume that it's quite small.  According to the [FAA](https://www.faa.gov/air_traffic/by_the_numbers/media/Air_Traffic_by_the_Numbers_2018.pdf), there were 971,595,898 air passengers in the U.S. in 2017.  Let's say that one of those travelers was carrying an explosive in their bag --- that would give a prior probability of 1 out of 971 million, which is very small!  The security personnel may have reasonably held a stronger prior in the months after the 9/11 attack, so let's say that their subjective belief was that one out of every million flyers was carrying an explosive.-->
+Para usar el teorema de Bayes, primero debemos especificar la probabilidad previa para la hipótesis. En este caso, no sabemos el número real pero podemos asumar que es pequeño. De acuerdo a la [FAA](https://www.faa.gov/air_traffic/by_the_numbers/media/Air_Traffic_by_the_Numbers_2018.pdf), había 971,595,898 pasajeros al aire en los Estados Unidos de América en 2017. Digamos que uno de esos viajeros llevaba un explosivo en su bolsa --- esto nos daría una probabilidad previa de 1 entre 971 millones, lo cual es muy pequeño. El personal de seguridad seguramente tuvo en mente una probabilidad previa mucho mayor en los meses después del ataque del 9/11, así que diremos que su pensamiento subjetivo era que uno en un millón de viajeros traía consigo un explosivo. 
 
 ```{r echo=FALSE}
 bayes_df = data.frame(prior=NA, 
@@ -159,14 +158,14 @@ bayes_df$posterior <- (bayes_df$likelihood * bayes_df$prior) / bayes_df$marginal
 Los datos se componen de los resultados de las pruebas sobre si alguien traía explosivos. Digamos que el staff de seguridad pasa una bolsa a través de su aparato para comprobar que sea seguro, lo pasa durante `r I(nTests)` veces, y da positivo en `r I(nPositives)` de las `r I(nTests)` pruebas.
 
 <!--### Computing the likelihood-->
-### Calcular la probabilidad
+### Calcular la probabilidad (likelihood)
 
 <!--We want to compute the likelihood of the data under the hypothesis that there is an explosive in the bag.  Let's say that we know (from the machine's manufacturer) that the sensitivity of the test is `r I(sprintf('%.2f',sensitivity))` -- that is, when a device is present, it will detect it `r I(sprintf('%.0f%%',sensitivity*100))` of the time. To determine the likelihood of our data under the hypothesis that a device is present, we can treat each test as a Bernoulli trial (that is, a trial with an outcome of true or false) with a probability of success of `r I(sprintf('%.2f',sensitivity))`, which we can model using a binomial distribution.-->
 Queremos calcular la probabilidad de los datos observados bajo la hipótesis de que hay un explosivo en la bolsa. Digamos que sabemos (por los fabricantes de la máquina) que la sensibilidad de la prueba es `r I(sprintf('%.2f',sensitivity))` -- o sea, cuando un objeto explosivo está presente lo detectará un `r I(sprintf('%.0f%%',sensitivity*100))` de las veces. Para determinar la probabilidad de nuestros datos bajo la hipótesis de que un objeto explosivo está presente, podemos tratar cada prueba como un ensayo de Bernoulli (o sea, un ensayo con un resultado de verdadero o falso) con una probabilidad de éxito de `r I(sprintf('%.2f',sensitivity))`, lo cual podemos modelar con una distribución binomial.  
 
 
 <!--### Computing the marginal likelihood-->
-### Calcular la probabilidad marginal
+### Calcular la probabilidad marginal (marginal likelihood)
 
 <!--We also need to know the overall likelihood of the data -- that is, finding `r I(nPositives)` positives out of `r I(nTests)` tests. Computing the marginal likelihood is often one of the most difficult aspects of Bayesian analysis, but for our example it's simple because we can take advantage of the specific form of Bayes' theorem for a binary outcome that we introduced in Section \@ref(bayestheorem):-->
 También necesitamos saber la probabilidad total de los datos, lo cual significa encontrar `r I(nPositives)` positivos de `r I(nTests)` pruebas. Calcular la probabilidad marginal es comunmente uno de los aspectos del análisis Bayesiano más difíciles, pero para nuestro ejemplo, es simple, ya que, podemos tomar ventaja de la forma específica del teorema de Bayes para un resultado binario que presentamos en la sección \@ref(bayestheorem):
@@ -228,10 +227,10 @@ drugDf <- tibble(
 Necesitamos algunos datos para poder estimar la efectividad del medicamento. Digamos que administramos el medicamento a 100 individuos, y encontramos que `r I(nResponders)` responden positivamente al medicamento.
 
 <!--### Computing the likelihood-->
-### Calcular la probabilidad
+### Calcular la probabilidad (likelihood)
 
-<!--We can compute the likelihood of the data under any particular value of the effectiveness parameter using the `dbinom()` function in R. In Figure \@ref(fig:like2) you can see the likelihood curves over numbers of responders for several different values of $P_{respond}$. Looking at this, it seems that our observed data are relatively more likely under the hypothesis of $P_{respond}=0.7$, somewhat less likely under the hypothesis of $P_{respond}=0.5$, and quite unlikely under the hypothesis of $P_{respond}=0.3$.  One of the fundamental ideas of Bayesian inference is that we should upweight our belief in values of our parameter of interest in proportion to how likely the data are under those values, balanced against what we believe about the parameter values before having seen the data (our prior knowledge).-->
-Podemos calcular la probabilidad de los datos bajo cualquier valor particular del parámetro de efectividad usando la función `dbinom()` en R. En la Figura \@ref(fig:like2) puedes ver las curvas de probabilidad sobre el número de respondientes (quienes respondieron positivamente al medicamento) para varios valores de $P_ {respond}$. Observando esto, parece que nuestros datos observados son relativamente más probables bajo la hipótesis de $P_ {respond} = 0.7$, algo menos probable bajo la hipótesis de $P_ {respond} = 0.5$, y bastante improbable bajo la hipótesis de $P_ {respond} = 0.3$. Una de las ideas fundamentales de la inferencia bayesiana es que debemos cambiar nuestra creencia en los valores de nuestro parámetro de interés en proporción a qué tan probables serían los datos bajo esos valores, contrastados contra lo que creíamos sobre los valores del parámetro antes de haber visto los datos (nuestro conocimiento previo).
+<!--We can compute the likelihood of the observed data under any particular value of the effectiveness parameter using the binomial density function. In Figure \@ref(fig:like2) you can see the likelihood curves over numbers of responders for several different values of $P_{respond}$. Looking at this, it seems that our observed data are relatively more likely under the hypothesis of $P_{respond}=0.7$, somewhat less likely under the hypothesis of $P_{respond}=0.5$, and quite unlikely under the hypothesis of $P_{respond}=0.3$.  One of the fundamental ideas of Bayesian inference is that we should upweight our belief in values of our parameter of interest in proportion to how likely the data are under those values, balanced against what we believed about the parameter values before having seen the data (our prior knowledge).-->
+Podemos calcular la probabilidad de los datos observados bajo cualquier valor particular del parámetro de efectividad usando la función de densidad binomial. En la Figura \@ref(fig:like2) puedes ver las curvas de probabilidad sobre el número de respondientes (quienes respondieron positivamente al medicamento) para varios valores de $P_ {respond}$. Observando esto, parece que nuestros datos observados son relativamente más probables bajo la hipótesis de $P_ {respond} = 0.7$, algo menos probable bajo la hipótesis de $P_ {respond} = 0.5$, y bastante improbable bajo la hipótesis de $P_ {respond} = 0.3$. Una de las ideas fundamentales de la inferencia bayesiana es que debemos cambiar nuestra creencia en los valores de nuestro parámetro de interés en proporción a qué tan probables serían los datos bajo esos valores, contrastados contra lo que creíamos acerca de los valores del parámetro antes de haber visto los datos (nuestro conocimiento previo).
 
 ```{r like2,echo=FALSE,fig.cap='Likelihood of each possible number of responders under several different hypotheses (p(respond)=0.5 (solid), 0.7 (dotted), 0.3 (dashed).  Observed value shown in the vertical line',fig.width=4,fig.height=4,out.height='50%'}
 
@@ -352,8 +351,8 @@ Frecuentemente nos gustaría saber no solo una estimación única para la probab
 
 ```
 
-<!--The interpretation of this credible interval is much closer to what we had hoped we could get from a confidence interval (but could not): It tells us that there is a 95% probability that the value of $p_{respond}$ falls between these two values.  Importantly, it shows that we have high confidence that $p_{respond} > 0.0$, meaning that the drug seems to have a positive effect.-->
-La interpretación de este intervalo de credibilidad está mucho más cerca de lo que esperábamos que pudiéramos obtener de un intervalo de confianza (pero no obtuvimos): nos dice que hay un 95% de probabilidad de que el valor de $p_{respond}$ se encuentre entre estos dos valores. Es importante destacar que muestra que tenemos una alta confianza en que $p_{respond} > 0.0$, lo que significa que el medicamento parece tener un efecto positivo.
+<!--The interpretation of this credible interval is much closer to what we had hoped we could get from a confidence interval (but could not): It tells us that there is a 95% probability that the value of $p_{respond}$ falls between these two values.  Importantly, in this case it shows that we have high confidence that $p_{respond} > 0.0$, meaning that the drug seems to have a positive effect.-->
+La interpretación de este intervalo de credibilidad está mucho más cerca de lo que esperábamos que pudiéramos obtener de un intervalo de confianza (pero no obtuvimos): nos dice que hay un 95% de probabilidad de que el valor de $p_{respond}$ se encuentre entre estos dos valores. Es importante destacar que, en este caso, muestra que tenemos una alta confianza en que $p_{respond} > 0.0$, lo que significa que el medicamento parece tener un efecto positivo.
 
 <!--In some cases the credible interval can be computed *numerically* based on a known distribution, but it's more common to generate a credible interval by sampling from the posterior distribution and then to compute quantiles of the samples. This is particularly useful when we don't have an easy way to express the posterior distribution numerically, which is often the case in real Bayesian data analysis.  One such method (rejection sampling) is explained in more detail in the Appendix at the end of this chapter.-->
 En algunos casos el intervalo de credibilidad puede ser calculado *numéricamente* basado en una distribución conocida, pero es mucho más común generar un intervalo de credibilidad al muestrar de la distribución posterior y luego calcular cuantiles de las muestras. Esto es particularmente útil cuando no tenemos una forma sencilla de expresar la distribución posterior numéricamente, que es común en un análisis de datos Bayesiano real. Uno de estos métodos (muestreo de rechazo) se explica con más detalle en el Apéndice al final de este capítulo.
@@ -497,15 +496,13 @@ En el panel de C de la Figura \@ref(fig:posteriorDistPrior) observamos que hay u
 <!--The impact of priors on the resulting inferences are the most controversial aspect of Bayesian statistics. What is the right prior to use? If the choice of prior determines the results (i.e., the posterior), how can you be sure you results are trustworthy? These are difficult questions, but we should not back away just because we are faced with hard questions. As we discussed previously, Bayesian analyses give us interpretable results (credible intervals, etc.). This alone should inspire us to think hard about these questions so that we can arrive with results that are reasonable and interpretable.-->
 El impacto de las probabilidades previas en el resultado de las inferencias es uno de los aspectos más controversial de la estadística Bayesiana. ¿Cuál es la probabilidad correcta a usar? Si la elección de probabilidad previa determina los resultados (es decir, la probabilidad posterior), ¿cómo puedes estar segurx que los resultados son confiables? Estas son preguntas difíciles, pero no deberíamos de retroceder solamente porque nos enfrentemos con preguntas difíciles. Como lo discutimos previamente, los análisis Bayesianos nos dan resultados interpretables (intervalos de credibilidad, etc.). Esto nos debería de inspirar a pensar seriamente sobre estas preguntas, y así poder llegar a resultados que sean razonables e interpretables.
 
-<!--There are various ways to choose one's priors, which (as we saw above) can impact the resulting inferences. Sometimes we have a very specific prior, as in the case where we expected our coin to lands heads 50% of the time, but in many cases we don't have such strong a starting point. *Uninformative priors* attempt to influence the resulting posterior as little as possible, as we saw in the example of the uniform prior above.  It's also common to use *weakly informative priors* (or *default priors*), which influence the result only very slightly. For example, if we had used a binomial distribution based on one heads out of two coin flips, the prior would have been centered around 0.5 but fairly flat, influence the posterior only slightly.  
-It is also possible to use priors based on the scientific literature or pre-existing data, which we would call *empirical priors*.  In general, however, we will stick to the use of uninformative/weakly informative priors, since they raise the least concern about influencing our results.-->
-Hay varias formas de elegir probabilidades previas, que (como vimos anteriormente) pueden afectar las inferencias resultantes. A veces tenemos una probabilidad previa muy específica, como en el caso en el que esperábamos que nuestra moneda saliera cara el 50% de las veces, pero en muchos casos no tenemos un punto de partida tan sólido. Las *probabilidades previas no informativas* intentan influir lo menos posible en la probabilidad posterior resultante, como vimos en el ejemplo anterior con probabilidad uniforme. También es común usar *probabilidades previas débilmente informativas* (o *probabilidades previas por defecto (por default)*), que influyen en el resultado sólo muy levemente. Por ejemplo, si hubiéramos usado una distribución binomial basada en el resultado de una cara de dos lanzamientos de moneda, la probabilidad previa se habría centrado alrededor de 0.5, pero bastante plana, influyendo en la probabilidad posterior sólo ligeramente.
-También es posible utilizar probabilidades previas basadas en la literatura científica o datos preexistentes, que llamaríamos *probabilidades previas empíricas*. En general, sin embargo, nos ceñiremos al uso de probabilidades previas no-informativas / poco-informativas, ya que generan la menor preocupación de influir en nuestros resultados.
+<!--There are various ways to choose one's priors, which (as we saw above) can impact the resulting inferences. Sometimes we have a very specific prior, as in the case where we expected our coin to lands heads 50% of the time, but in many cases we don't have such strong a starting point. *Uninformative priors* attempt to influence the resulting posterior as little as possible, as we saw in the example of the uniform prior above.  It's also common to use *weakly informative priors* (or *default priors*), which influence the result only very slightly. For example, if we had used a binomial distribution based on one heads out of two coin flips, the prior would have been centered around 0.5 but fairly flat, influence the posterior only slightly.  It is also possible to use priors based on the scientific literature or pre-existing data, which we would call *empirical priors*.  In general, however, we will stick to the use of uninformative/weakly informative priors, since they raise the least concern about influencing our results.-->
+Hay varias formas de elegir probabilidades previas, que (como vimos anteriormente) pueden afectar las inferencias resultantes. A veces tenemos una probabilidad previa muy específica, como en el caso en el que esperábamos que nuestra moneda saliera cara el 50% de las veces, pero en muchos casos no tenemos un punto de partida tan sólido. Las *probabilidades previas no informativas* intentan influir lo menos posible en la probabilidad posterior resultante, como vimos en el ejemplo anterior con probabilidad uniforme. También es común usar *probabilidades previas débilmente informativas* (o *probabilidades previas por defecto (default priors)*), que influyen en el resultado sólo muy levemente. Por ejemplo, si hubiéramos usado una distribución binomial basada en el resultado de una cara de dos lanzamientos de moneda, la probabilidad previa se habría centrado alrededor de 0.5, pero bastante plana, influyendo en la probabilidad posterior sólo ligeramente.  También es posible utilizar probabilidades previas basadas en la literatura científica o datos preexistentes, que llamaríamos *probabilidades previas empíricas*. En general, sin embargo, nos ceñiremos al uso de probabilidades previas no-informativas / poco-informativas, ya que generan la menor preocupación de influir en nuestros resultados.
 
 <!--## Bayesian hypothesis testing-->
 ## Prueba de hipótesis Bayesiana
 
-<!--Having learned how to perform Bayesian estimation, we now turn to the use of Bayesian methods for hypothesis testing.  Let's say that there are two politicians who differ in their beliefs about whether the public is in favor an extra tax to support the national parks. Senator Smith thinks that only 40% of people are in favor of the tax, whereas Senator Jones thinks that 60% of people are in favor.  They arrange to have a poll done to test this, which asks 1000 randomly selected people whether they support such a tax. The results are that 490 of the people in the polled sample were in favor of the tax. Based on these data, we would like to know: Do the data support the claims of one senator over the other,and by how much?  We can test this using a concept known as the [Bayes factor](https://bayesfactor.blogspot.com/2014/02/the-bayesfactor-package-this-blog-is.html),which quantifies which hypothesis is better by comparing how well each predicts the observed data.-->
+<!--Having learned how to perform Bayesian estimation, we now turn to the use of Bayesian methods for hypothesis testing.  Let's say that there are two politicians who differ in their beliefs about whether the public is in favor an extra tax to support the national parks. Senator Smith thinks that only 40% of people are in favor of the tax, whereas Senator Jones thinks that 60% of people are in favor.  They arrange to have a poll done to test this, which asks 1000 randomly selected people whether they support such a tax. The results are that 490 of the people in the polled sample were in favor of the tax. Based on these data, we would like to know: Do the data support the claims of one senator over the other,and by how much?  We can test this using a concept known as the [Bayes factor](https://bayesfactor.blogspot.com/2014/02/the-bayesfactor-package-this-blog-is.html), which quantifies which hypothesis is better by comparing how well each predicts the observed data.-->
 Habiendo aprendido cómo realizar la estimación bayesiana, ahora pasamos al uso de métodos bayesianos para la prueba de hipótesis. Digamos que hay dos políticos que difieren en sus creencias sobre si el público está a favor de un impuesto extra para apoyar los parques nacionales. El senador Smith piensa que solo el 40% de la gente está a favor del impuesto, mientras que el senador Jones cree que el 60% de la gente está a favor. Organizan una encuesta para probar esto, que pregunta a 1000 personas seleccionadas al azar si apoyan tal impuesto. Los resultados son que 490 de las personas de la muestra encuestada estaban a favor del impuesto. Con base en estos datos, nos gustaría saber: ¿Los datos respaldan las afirmaciones de un senador sobre el otro y en qué medida? Podemos probar esto usando un concepto conocido como el [factor de Bayes](https://bayesfactor.blogspot.com/2014/02/the-bayesfactor-package-this-blog-is.html), que cuantifica qué hipótesis es mejor comparando qué tan bien predicen los datos cada una de las hipótesis.
 
 
@@ -640,8 +637,8 @@ Ahora vemos que el factor Bayes para un efecto positivo frente a un efecto negat
 |20 to 150| strong|
 |>150 | very strong|
 
-<!--Based on this, even though the statisical result is significant, the amount of evidence in favor of the alternative vs. the point null hypothesis is weak enough that it's not worth even mentioning, whereas the evidence for the directional hypothesis is relatively strong.-->
-Con base en esto, aunque el resultado estadístico es significativo, la cantidad de evidencia a favor de la hipótesis alternativa frente a la hipótesis nula puntual es lo suficientemente débil como para ni siquiera mencionarla, mientras que la evidencia para la hipótesis direccional es relativamente sólida.
+<!--Based on this, even though the statisical result is significant, the amount of evidence in favor of the alternative vs. the point null hypothesis is weak enough that it's hardly worth even mentioning, whereas the evidence for the directional hypothesis is relatively strong.-->
+Con base en esto, aunque el resultado estadístico es significativo, la cantidad de evidencia a favor de la hipótesis alternativa frente a la hipótesis nula puntual es tan débil que apenas vale la pena mencionarla, mientras que la evidencia para la hipótesis direccional es relativamente sólida.
 
 
 <!--### Assessing evidence for the null hypothesis-->
@@ -676,10 +673,10 @@ Después de leer este capítulo, debes ser capaz de:
 <!-- ### Rejection sampling -->
 ### Muestreo de rechazo
 
-<!-- We will generate samples from our posterior distribution using a simple algorithm known as [*rejection sampling*](https://am207.github.io/2017/wiki/rejectionsampling.html).  The idea is that we choose a random value of x (in this case $p_{respond}$) and a random value of y (in this case, the posterior probability of $p_{respond}$) each from a uniform distribution. We then only accept the sample if $y < f(x)$ - in this case, if the randomly selected value of y is less than the actual posterior probability of y.  Figure \@ref(fig:rejectionSampling) shows an example of a histogram of samples using rejection sampling, along with the 95% credible intervals obtained using this method.   -->
-Generaremos muestras a partir de nuestra distribución de probabilidad posterior usando un algoritmo simple conocido como [*muestreo de rechazo*(*rejection sampling*)](https://am207.github.io/2017/wiki/rejectionsampling.html). La idea es que elegimos un valor aleatorio de x (en este caso $p_{respond}$) y un valor aleatorio de y (en este caso, la probabilidad posterior de $p_{respond}$) cada uno de una distribución uniforme. Luego aceptamos la muestra sólo si $y < f(x)$ - en este caso, si el valor seleccionado aleatoriamente de y es menor que la probabilidad posterior real de y. La Figura \@ref(fig:rejectionSampling) muestra un ejemplo de un histograma de muestras usando el muestreo de rechazo, junto con el intervalo de credibilidad del 95% obtenido usando este método.
+<!-- We will generate samples from our posterior distribution using a simple algorithm known as [*rejection sampling*](https://am207.github.io/2017/wiki/rejectionsampling.html).  The idea is that we choose a random value of x (in this case $p_{respond}$) and a random value of y (in this case, the posterior probability of $p_{respond}$) each from a uniform distribution. We then only accept the sample if $y < f(x)$ - in this case, if the randomly selected value of y is less than the actual posterior probability of y.  Figure \@ref(fig:rejectionSampling) shows an example of a histogram of samples using rejection sampling, along with the 95% credible intervals obtained using this method (with the values presented in Table \@ref(tab:credInt))   -->
+Generaremos muestras a partir de nuestra distribución de probabilidad posterior usando un algoritmo simple conocido como [*muestreo de rechazo*(*rejection sampling*)](https://am207.github.io/2017/wiki/rejectionsampling.html). La idea es que elegimos un valor aleatorio de x (en este caso $p_{respond}$) y un valor aleatorio de y (en este caso, la probabilidad posterior de $p_{respond}$) cada uno de una distribución uniforme. Luego aceptamos la muestra sólo si $y < f(x)$ - en este caso, si el valor seleccionado aleatoriamente de y es menor que la probabilidad posterior real de y. La Figura \@ref(fig:rejectionSampling) muestra un ejemplo de un histograma de muestras usando el muestreo de rechazo, junto con el intervalo de credibilidad del 95% obtenido usando este método (con los valores presentados en la Tabla \@ref(tab:credInt)).
 
-```{r}
+```{r credInt, echo=FALSE}
 # Compute credible intervals for example
 
 nsamples <- 100000
@@ -700,7 +697,8 @@ credible_interval <- quantile(x = accepted_samples,
 kable(credible_interval)
 ```
 
-```{r rejectionSampling,echo=FALSE,fig.cap="Rejection sampling example.The black line shows the density of all possible values of p(respond); the blue lines show the 2.5th and 97.5th percentiles of the distribution, which represent the 95 percent credible interval for the estimate of p(respond).",fig.width=4,fig.height=4,out.height='50%'}
+<!-- fig.cap="Rejection sampling example.The black line shows the density of all possible values of p(respond); the blue lines show the 2.5th and 97.5th percentiles of the distribution, which represent the 95 percent credible interval for the estimate of p(respond)." -->
+```{r rejectionSampling,echo=FALSE,fig.cap="Ejemplo de muestreo de rechazo. La línea negra muestra la densidad de todos los posibles valores de p(respond); las líneas azules muestran los percentiles 2.5 y 97.5 de la distribución, que representan el intervalo de credibilidad al 95 porciento para la estimación de p(respond).",fig.width=4,fig.height=4,out.height='50%'}
 
 # plot histogram
 
